# MiLuStudio

./: .gitignore  README.md
backend/sidecars/python-skills/: README.md  pyproject.toml
backend/sidecars/python-skills/milu_studio_skills/: __init__.py  cli.py  contracts.py  errors.py  gateway.py
backend/sidecars/python-skills/skills/: __init__.py
backend/sidecars/python-skills/skills/auto_editor/: __init__.py  executor.py  prompt.md  schema.input.json  schema.output.json  skill.yaml  validators.py
backend/sidecars/python-skills/skills/character_bible/: __init__.py  executor.py  prompt.md  schema.input.json  schema.output.json  skill.yaml  validators.py
backend/sidecars/python-skills/skills/episode_writer/: __init__.py  executor.py  prompt.md  schema.input.json  schema.output.json  skill.yaml  validators.py
backend/sidecars/python-skills/skills/export_packager/: executor.py  prompt.md  schema.input.json  schema.output.json  skill.yaml  validators.py
backend/sidecars/python-skills/skills/image_generation/: __init__.py  executor.py  prompt.md  schema.input.json  schema.output.json  skill.yaml  validators.py
backend/sidecars/python-skills/tests/: __init__.py  test_cli.py  test_stage10_audio_subtitle_edit_pipeline.py  test_stage11_quality_checker_pipeline.py  test_stage13_export_packager.py  test_stage14_skill_contracts.py  test_stage5_script_pipeline.py  test_stage6_character_style_pipeline.py  test_stage7_storyboard_pipeline.py  test_stage8_image_pipeline.py  test_stage9_video_pipeline.py  test_story_intake.py
docs/: MILUSTUDIO_BUILD_PLAN.md  PRODUCT_SPEC.md  (+6 more)
(+257 files in other folders)
