[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "milu-studio-skills"
version = "0.1.0"
description = "Internal Production Skills runtime for MiLuStudio."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = []

[project.scripts]
milu-skills = "milu_studio_skills.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["milu_studio_skills*", "skills*"]
